# Sources for rear

module_DATA = \
  modules/RearSystemCheck.rb \
  modules/Rear.rb

client_DATA = \
  clients/rear.rb

yncludedir = @yncludedir@/rear
ynclude_DATA = \
  include/rear/ui.rb

scrconf_DATA = \
  scrconf/rear_conf.scr

desktop_DATA = \
  desktop/rear.desktop

EXTRA_DIST = $(module_DATA) $(client_DATA) $(ynclude_DATA) $(scrconf_DATA) $(desktop_DATA)

include $(top_srcdir)/Makefile.am.common